syntax = "proto3";

option java_package = "com.cactusknights.chefbook";
option java_multiple_files = true;

message SettingsProto {
  enum DataSource {
    LOCAL = 0;
    REMOTE = 1;
  }
  enum UserType {
    OFFLINE = 0;
    ONLINE = 1;
  }
  enum AppIcon {
    STANDARD = 0;
    OLD = 1;
  }
  enum AppTheme {
    SYSTEM = 0;
    LIGHT = 1;
    DARK = 2;
  }
  enum Tabs {
    RECIPES = 0;
    SHOPPING_LIST = 1;
  }
  DataSource dataSource = 1;
  UserType userType = 2;
  AppIcon appIcon = 3;
  AppTheme appTheme = 4;
  Tabs defaultTab = 5;
}